<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="fill_parent" 
  android:layout_height="fill_parent">
  <include layout="@layout/actionbar"/>
  <ScrollView 
	android:id="@+id/main"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:scrollbars="none"
    android:layout_weight="1"
    android:background="#FFF5F5F5">
    <RelativeLayout 
                android:layout_width="fill_parent" 
                android:layout_height="fill_parent"
                android:layout_gravity="center_horizontal"
                android:padding="10dip"
                > 
  <include layout="@layout/item_time_bar"
  		   android:id="@+id/time_bar"
           android:layout_width="fill_parent"
           android:layout_height="wrap_content"
           android:layout_marginBottom="10dip"/>
  
  <RelativeLayout android:layout_width="fill_parent" 
                android:layout_height="fill_parent"
                android:layout_marginBottom="10dip"
                android:layout_below="@id/time_bar"
                android:background="@drawable/content_bg"
                android:id="@+id/section1">
    	<TextView android:id="@+id/l_section1" 
              android:layout_width="fill_parent" 
              android:layout_height="wrap_content"
              android:text="@string/header_type"
              android:layout_marginBottom="10dip"
              style="@style/WordPressSectionHeader"/>
              <Spinner android:id="@+id/account_type_spinner"
        			android:layout_width="fill_parent"
        			android:layout_height="wrap_content"
        			android:background="@drawable/wp_spinner_bg"
        			android:prompt="@string/account_type_prompt"
      				android:entries="@array/account_type_array"
   					android:layout_below="@id/l_section1"/>
       
            
   </RelativeLayout>
   <RelativeLayout android:layout_width="fill_parent" 
                android:layout_height="fill_parent"
                android:background="@drawable/content_bg"
                android:layout_below="@id/section1"
                android:layout_marginBottom="10dip"
                android:id="@+id/section2">
                
               <TextView android:id="@+id/l_section2" 
              android:layout_width="fill_parent" 
              android:layout_height="wrap_content"
              android:text="@string/header_amount"
              style="@style/WordPressSectionHeader"
              android:layout_marginBottom="10dip"
              />
               <include layout="@layout/item_amount_input_with_x"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:layout_marginBottom="20dip"
              android:layout_below="@+id/l_section2"
              />
              
              </RelativeLayout>
              <RelativeLayout android:layout_width="fill_parent" 
                android:layout_height="fill_parent"
                android:background="@drawable/content_bg"
                android:layout_below="@id/section2"
                android:id="@+id/section3">
                
               <TextView android:id="@+id/l_section3" 
              android:layout_width="fill_parent" 
              android:layout_height="wrap_content"
              android:text="@string/header_general"
              style="@style/WordPressSectionHeader"
              android:layout_marginBottom="10dip"
              />
              <EditText      
     	 		android:id="@+id/account_content_entry"  
      			android:minHeight="40dip"
              android:layout_width="fill_parent" 
              android:layout_height="wrap_content" 
              android:background="@android:drawable/editbox_background"
              android:autoText="true"
              android:capitalize="sentences"
              android:hint="消费名称"
              android:layout_below="@id/l_section3"
              android:layout_marginBottom="10dip"/> 
        <EditText      
      			android:id="@+id/account_remark_entry"  
      			android:gravity="top" 
              android:layout_width="fill_parent" 
              android:layout_height="wrap_content" 
              android:background="@android:drawable/editbox_background"
              android:minLines="5"
              android:autoText="true"
              android:capitalize="sentences"
              android:layout_below="@id/account_content_entry"
              android:textColorLink="#21759b"
              android:hint="备注"/>  
             
              </RelativeLayout>
   			<Button
			android:id="@+id/account_submit" 
            android:layout_width="wrap_content"  
            android:layout_height="wrap_content" 
            android:layout_below="@id/section3"
            android:background="@drawable/wp_button"
            android:layout_alignParentRight="true"
            android:textSize="20dip"
            android:text="保存" /> 
            
			<Button
			android:id="@+id/account_cancel" 
            android:layout_alignTop="@id/account_submit"
            android:layout_toLeftOf="@id/account_submit" 
            android:background="@drawable/wp_button"
            android:layout_width="wrap_content"  
            android:layout_height="wrap_content"
            android:textSize="20dip"
            android:text="舍弃" />
    </RelativeLayout>
  </ScrollView>
  
</LinearLayout>
